This file documents the revision history for Perl extension Mojo.

0.9     2008-12-01 00:00:00
        - Added modes to Mojolicious.
        - Added Mojo::Log and log support for Mojo/Mojolicious.
        - Changed MojoX::Renderer and Mojo::Template api to make catching
          errors easier, we now use a scalar ref for results like most
          template engines.
        - Added MojoX::Context.
        - Added multi level controller class support to Mojolicious.
        - MojoX::Dispatcher::Routes should be able to fail.
        - Added diagnostics functions to Mojo::HelloWorld.
        - Made the env parser Apache compatible.
        - Made Mojo::Server::FastCGI Apache compatible.
        - Added namespace, class and method captures to
          MojoX::Dispatcher::Routes.
        - Made url_for work for rebased applications.
        - Added ctx, render, req, res and stash methods to Mojolicious
          controllers.
        - Changed cookie, param and upload in Mojo::Parameters to return a
          list.
        - Added support for templateless renderers to MojoX::Renderer.
        - Added blacklist to MojoX::Dispatcher::Routes.
        - Fixed Mojo::Date bugs. (vti)
        - Fixed / routes matching too much.
        - New Windows workaround in Mojo::Client and Mojo::Server::Daemon.
        - Cleaned up Mojo::Transaction. (Ask Bjoern Hansen)
        - Added .perltidyrc. (Ask Bjoern Hansen)
        - Allow chains to be broken with return values in
          MojoX::Dispatcher::Routes.
        - The stack in MojoX::Routes resets now.
        - Renamed default_handler to default_format in MojoX::Renderer.
        - Disallow actions beginning with _ in MojoX::Dispatcher::Routes.
        - Preload application in servers. (Graham Barr)
        - Renamed is_version to at_least_version. (Mark Stosberg)
        - Added documentation. (Ch Lamprecht)
        - Added param tests. (Mark Stosberg)
        - Added documentation for Mojo::Log. (Mark Stosberg)