@@ -145,11 +145,8 @@ sub dispatch {
     # Use routes if we don't have a response code yet
     $self->routes->dispatch($c) unless $done;
 
-    # Nothing found, serve static file "public/404.html"
-    unless ($c->res->code) {
-        $self->static->serve($c, '/404.html');
-        $c->res->code(404);
-    }
+    # Nothing found, serve static file "/errdocs/404.html"
+    $self->static->serve_404 unless $c->res->code;
 }
 
 # This method will run once at server start
