@@ -1,5 +1,7 @@
 This file documents the revision history for Perl extension Mojo.
 
+        - Added serve_404 to MojoX::Dispatcher::Static (Mark Stosberg)
+
 0.9     2008-12-01 00:00:00
         - Added modes to Mojolicious.
         - Added Mojo::Log and log support for Mojo/Mojolicious.
